# my_telegram_homework_bot

./: Makefile  Makefile.txt  README.md  exceptions.py  homework.py  pyproject.toml  requirements.txt  setup.cfg
tests/: conftest.py  test_bot.py  utils.py
tests/fixtures/: fixture_data.py
